# calculatorCarboEx

./: CMakeLists.txt  Start.cpp  Start.h  global_obj.cpp  global_obj.hpp  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  productsModel.qml  projekt_pk4_pl_PL.ts
data_structs/: Dish.cpp  Dishes.cpp  Food.cpp  Meal.cpp  Meals.cpp  Product.cpp  Products.cpp
data_structs/headers/: Dish.hpp  Dishes.hpp  Food.hpp  Meal.hpp  Meals.hpp  Product.hpp  Products.hpp
networking/: Fetcher.cpp  Poster.cpp
networking/headers/: Fetcher.hpp  Poster.hpp
tables/: CustomTable.cpp  DishesTable.cpp  MealsTable.cpp  ProductsTable.cpp  SimpleTable.cpp
tables/headers/: CustomTable.h  DishesTable.h  MealsTable.h  ProductsTable.h  SimpleTable.h
